レビュー投稿

--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/header" %>
 <div class=wrapper>
     <% @works.each do |work| %>
     <div class=work_box>
@@ -10,6 +11,6 @@
       </div>  
     </div>
   <% end %>  
-  
 </div>
+<%= render "shared/footer" %>
    
