--- a/app/assets/stylesheets/reviews.css
+++ b/app/assets/stylesheets/reviews.css
@@ -87,3 +87,46 @@
 a:hover {
   color: black;
 }
+
+.review_box {
+  width: Calc(100% / 2.1);
+  margin: 10px;
+  float: left;
+  background-color: green;
+}
+
+.review_title_box {
+  padding: 10px 20px 10px 20px;
+  width: 100%;
+  height: 50px;
+  background-color: black;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  font-size: small;
+  color: white;
+  font-weight: bold;
+}
+
+.review_text_box {
+  padding: 10px 20px 10px 20px;
+  width: 100%;
+  height: calc(calc(100vw - 400px) / 2);
+  background-color: #EEE8AA;
+  font-size: small;
+  color: black;
+  font-weight: bold;
+} 
+/* .review_text {
+  font-size: small;
+  color: black;
+  font-weight: bold;
+} */
+
+/* .review_title_text {
+  font-size: small;
+  color: white;
+  font-weight: bold;
+} */
+
+
