--- a/app/views/artists/index.html.erb
+++ b/app/views/artists/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/header" %>
 <div class=wrapper>
     <% @artists.each do |artist| %>
     <div class=artist>
@@ -8,4 +9,5 @@
     </div>
     <% end %>  
 </div>
+<%= render "shared/footer" %>
    
