--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,3 +1,4 @@
+<%= render "shared/header" %>
 <div class=review_wrapper> 
   <div class=work_detail_box>
     <div class=review_work_box>
@@ -157,4 +158,23 @@
     </div>
   </div>
 </div>
+<div class=review_wrapper> 
+  <div class=work_detail_box>
+  <% @reviews.each do |review| %>
+    <div class=review_box>
+      <div class=review_title_box>
+      <%= review.title %>
+      </div>  
+      <div class=review_text_box>
+      <%= review.review %>
+      </div> 
+    </div>
+  <% end %>
+  </div>
+</div>
+<%= link_to(new_artist_work_review_path, class: 'purchase-btn') do %>
+  <span class='purchase-btn-text'>投稿する</span>
+  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+<% end %>
+<%= render "shared/footer" %>
    
