--- a/app/assets/stylesheets/shared/second_fotter.css
+++ b/app/assets/stylesheets/shared/second_fotter.css
@@ -1,6 +1,6 @@
 .second-fotter {
   width: 100%;
-  min-width: 800px;
+  /* min-width: 800px; */
   height: 200px;
   background-color: #f5f5f5;
   display: flex;
@@ -8,7 +8,7 @@
 }
 
 .second-fotter-text-wrap {
-  margin: 30px 0;
+  margin: 50px 0;
   display: flex;
   justify-content: center;
 }
