--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,27 +1,33 @@
 <%# CSS・・・assets/stylesheets/shared/header.css %>
 <header class='top-page-header'>
   <div class='search-bar-contents'>
-    <%= link_to image_tag("furima-logo-color.png", class:"furima-icon"), "/" %>
-    <form class="search-form" action="#">
-      <input class='input-box' placeholder='キーワードから探す'>
-      <button class="search-button">
-        <%= image_tag "search.png", class:"search-icon" %>
-      </button>
-    </form>
+    <%= link_to image_tag("ourtracks_logo.png", class:"furima-icon"), "/" %>
+    <%# form class="search-form" action="#">%>
+      <%#input class='input-box' placeholder='アーティストを検索'>%>
+      <%#button class="search-button">%>
+         <%# image_tag "search.png", class:"search-icon" %>
+      <%#/button>%>
+    <%#/form>%>
+    <%= form_with url: search_artists_path, method: :get, local: true do |f| %>
+    <div class="search-form">
+      <%= f.text_field :artist_name, class: 'input-box', placeholder: 'アーティストを検索' %>
+      <%= f.submit :検索, class: "search-icon" %>
+    </div>  
+    <% end %>
   </div>
   <div class='nav'>
     <ul class='lists-left'>
-      <li><%= link_to 'カテゴリー', "#", class: "category-list" %></li>
-      <li><%= link_to 'ブランド', "#", class: "brand-list" %></li>
+      <li><%= link_to 'ジャンル', "#", class: "category-list" %></li>
+      <li><%= link_to '年代', "#", class: "brand-list" %></li>
     </ul>
     <ul class='lists-right'>
-        <%# if user_signed_in? %>
-         <li><%= link_to 'ユーザー名', "#", class: "user-nickname" %></li> 
-         <li><%= link_to 'ログアウト', "#", method: :delete, class: "logout" %></li> 
-        <%# else %>
-         <li><%# link_to 'ログイン', "#", class: "login" %></li>
-         <li><%# link_to '新規登録', "#", class: "sign-up" %></li>
-        <%# end %>
+        <% if user_signed_in? %>
+         <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li> 
+         <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li> 
+        <% else %>
+         <li><%= link_to 'ログイン', new_user_session_path, class: "login" %></li>
+         <li><%= link_to '新規登録', new_user_registration_path, class: "sign-up" %></li>
+        <% end %>
     </ul>
   </div>
 </header>
