入力チェック実装

--- a/app/assets/stylesheets/reviews.css
+++ b/app/assets/stylesheets/reviews.css
@@ -89,7 +89,8 @@ a:hover {
 }
 
 .review_box {
-  width: Calc(100% / 2.1);
+  /* width: Calc(100% / 2.1); */
+  width: 100%;
   margin: 10px;
   float: left;
   background-color: green;
@@ -98,7 +99,7 @@ a:hover {
 .review_title_box {
   padding: 10px 20px 10px 20px;
   width: 100%;
-  height: 50px;
+  height: 100%;
   background-color: black;
   /* display: flex;
   justify-content: center;
@@ -111,12 +112,27 @@ a:hover {
 .review_text_box {
   padding: 10px 20px 10px 20px;
   width: 100%;
-  height: calc(calc(100vw - 400px) / 2);
+  /* height: calc(calc(100vw - 400px) / 2); */
+  height: 100%;
   background-color: #EEE8AA;
   font-size: small;
   color: black;
   font-weight: bold;
 } 
+
+.review_user_box {
+  padding: 10px 20px 10px 20px;
+  width: 100%;
+  height: 100%;
+  background-color: #EEE8AA;
+  /* display: flex;
+  justify-content: center;
+  align-items: center; */
+  font-size: small;
+  color: black;
+  font-weight: bold;
+  text-align: right;
+}
 /* .review_text {
   font-size: small;
   color: black;
