--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -1,7 +1,7 @@
 .registration-main {
   width: 100%;
   min-width: 800px;
-  height: 100%;
+  /* height: 100%; */
   background-color: #f5f5f5;
   display: flex;
   justify-content: center;
@@ -12,7 +12,7 @@
   width: 50%;
   background-color: white;
   padding-bottom: 70px;
-  height: 850px;
+  /* height: 850px; */
 }
 
 .form-header {
