--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,24 +1,24 @@
 <%= render "shared/header" %>
   <div class="items-sell-main">
-    <h2 class="items-sell-title">レビューを入力</h2>
+    <h2 class="items-sell-title">レビュー投稿</h2>
     <%# ルーティングでネストを定義している時はネストしたモデルも記述が必要 %>
     <%= form_with model: [@artist, @work, @review], local: true do |f| %>
 
-    <%# render 'shared/error_messages', model: f.object %>
+      <%= render 'shared/error_messages', model: f.object %>
 
     <%# 商品名と商品説明 %>
     <div class="new-items">
       <div class="weight-bold-text">
-        レビュータイトル
+        タイトル
         <span class="indispensable">必須</span>
       </div>
-      <%= f.text_area :title, class:"items-text", id:"item-name", placeholder:"レビュータイトル（必須 40文字まで)" %>
+      <%= f.text_area :title, class:"items-text", id:"item-name", placeholder:"タイトル（必須 40文字まで) 例 星野源/POP VIRUS）源さんの音楽も繋がっていく。" %>
       <div class="items-explain">
         <div class="weight-bold-text">
-          レビュー内容
+          レビュー
           <span class="indispensable">必須</span>
         </div>
-        <%= f.text_area :review, class:"items-text", id:"item-info", placeholder:"レビュー内容（必須 1,000文字まで）（色、素材、重さ、定価、注意点など）例）2010年頃に1万円で購入したジャケットです。ライトグレーで傷はありません。あわせやすいのでおすすめです。" ,rows:"7" %>
+        <%= f.text_area :review, class:"items-text", id:"item-info", placeholder:"レビュー（必須 200文字から1,000文字まで）例 星野源/POP VIRUS）今や日本を代表するアーティストとなった星野源。 タイトルの「POP VIRUS」、CDショップ店員として、源さんのCDを手に取る人の広がりを目の当たりにしてきた。その広がり方はまさにウイルス的で源さんにぴったりのタイトルだ。多種多様の要素を織り交ぜた楽曲の数々。でも根元にはPOPSがあり、源さんが新たなPOPの在り方を提示してくれた。POP VIRUS 感染はまだまだ続いていく、そして源さんの音楽も繋がっていく。" ,rows:"30" %>
       </div>
     </div>
     <%# /商品名と商品説明 %>
