--- a/app/assets/stylesheets/shared/footer.scss
+++ b/app/assets/stylesheets/shared/footer.scss
@@ -3,7 +3,7 @@
 
 .ad-footer-contents {
   width: 100vw;
-  background-image: image-url('furima-footer.png');
+  // background-image: image-url('furima-footer.png');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
@@ -34,6 +34,7 @@
   color: #FFF;
   background-color: #272727;
   text-align: center;
+  // height: 100%;
 }
 
 .footer-contents {
