--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,7 +2,7 @@
 <div class=review_wrapper> 
   <div class=work_detail_box>
     <div class=review_work_box>
-      <%= image_tag(@work.image, class: "review_work_photo") %>
+      <%= image_tag(@work.photo, class: "review_work_photo") %>
       <div class=release_no_box>
         <p class=release_no><%= @work.release_no %></p>
       </div>  
