--- a/app/assets/stylesheets/artist/index.css
+++ b/app/assets/stylesheets/artist/index.css
@@ -9,8 +9,18 @@
   width: Calc(100vw / 2 - 100px);
   margin: 20px;
   float: left;
-  background-color: green;
+  
+  /* background-color: green; */
 }
+
+.message-box {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+}
+
 
 .photo {
   width: Calc(100vw / 2 - 100px);
@@ -24,14 +34,18 @@
 
 .name {
   width: Calc(100vw / 2 - 100px);
-  height: 50px;
+  height: 94px;
   background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .text_name {
   font: bold;
   text-align: center;
   color: white;
+  font-size: 30px;
 }
 
 
