--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -2,7 +2,7 @@
 <div class=wrapper>
     <% @works.each do |work| %>
     <div class=work_box>
-      <%= link_to image_tag(work.image, class: "work_photo"), artist_work_reviews_path(@artist_id, work.id) %>
+      <%= link_to image_tag(work.photo, class: "work_photo"), artist_work_reviews_path(@artist, work.id) if work.photo.present? %>
       <div class=release_no_box>
         <p class=release_no><%= work.release_no %></p>
       </div>
@@ -12,5 +12,9 @@
     </div>
   <% end %>  
 </div>
+<%= link_to(new_artist_work_path, class: 'purchase-btn') do %>
+<span class='purchase-btn-text'>登録する</span>
+<%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+<% end %>
 <%= render "shared/footer" %>
    
