db定義見直し

--- a/app/views/artists/new.html.erb
+++ b/app/views/artists/new.html.erb
@@ -26,12 +26,12 @@
         アーティスト名
         <span class="indispensable">必須</span>
       </div>
-      <%= f.text_area :artist_name, class:"work-name-text", id:"item-name", placeholder:"アーティスト名（必須 30文字まで)" %>
+      <%= f.text_area :name, class:"work-name-text", id:"item-name", placeholder:"アーティスト名（必須 30文字まで)" %>
       <div class="items-explain">
         <div class="weight-bold-text">
           プロフィール
         </div>
-        <%= f.text_area :artist_profile, class:"items-text", id:"item-info", placeholder:"プロフィール（必須 1,000文字まで）" ,rows:"10" %>
+        <%= f.text_area :profile, class:"items-text", id:"item-info", placeholder:"プロフィール（必須 1,000文字まで）" ,rows:"10" %>
       </div>
       <div class="weight-bold-text">
         ジャンル
