--- a/app/views/artists/search.html.erb
+++ b/app/views/artists/search.html.erb
@@ -11,7 +11,7 @@
   <div class=artist>
     <%= link_to image_tag(artist.image, class: "photo"), artist_works_path(artist.id) if artist.image.present? %>
       <div class=name>
-      <p class=text_name><%= artist.artist_name %></p>
+      <p class=text_name><%= artist.name %></p>
     </div>  
   </div>
   <% end %>  
