レビュー画面修正

--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -16,143 +16,143 @@
     <div class=song_list_box>
       <ol class=song_list>
         <li clsaa=song>
-          <% if !@work.m1.nil? && !@work.m1.empty? then %>
+          <% unless @work.m1.blank? then %>
             <span class=idx>M01.</span>
           <% end %>
           <a class=song_name><%= @work.m1 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m2.nil? && !@work.m2.empty? then %>
+          <% unless @work.m2.blank? then %>
             <span class=idx>M02.</span>
           <% end %>
           <a class=song_name><%= @work.m2 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m3.nil? && !@work.m3.empty? then %>
+          <% unless @work.m3.blank? then %>
             <span class=idx>M03.</span>
           <% end %>
           <a class=song_name><%= @work.m3 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m4.nil? && !@work.m4.empty? then %>
+          <% unless @work.m4.blank? then %>
             <span class=idx>M04.</span>
           <% end %>
           <a class=song_name><%= @work.m4 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m5.nil? && !@work.m5.empty? then %>
+          <% unless @work.m5.blank? then %>
             <span class=idx>M05.</span>
           <% end %>
           <a class=song_name><%= @work.m5 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m6.nil? && !@work.m6.empty? then %>
+          <% unless @work.m6.blank? then %>
             <span class=idx>M06.</span>
           <% end %>
           <a class=song_name><%= @work.m6 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m7.nil? && !@work.m7.empty? then %>
+          <% unless @work.m7.blank? then %>
             <span class=idx>M07.</span>
           <% end %>
           <a class=song_name><%= @work.m7 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m8.nil? && !@work.m8.empty? then %>
+          <% unless @work.m8.blank? then %>
             <span class=idx>M08.</span>
           <% end %>
           <a class=song_name><%= @work.m8 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m9.nil? && !@work.m9.empty? then %>
+          <% unless @work.m9.blank? then %>
             <span class=idx>M09.</span>
           <% end %>
           <a class=song_name><%= @work.m9 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m10.nil? && !@work.m10.empty? then %>
+          <% unless @work.m10.blank? then %>
             <span class=idx>M10.</span>
           <% end %>
           <a class=song_name><%= @work.m10 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m11.nil? && !@work.m11.empty? then %>
+          <% unless @work.m11.blank? then %>
             <span class=idx>M11.</span>
           <% end %>
           <a class=song_name><%= @work.m11 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m12.nil? && !@work.m12.empty? then %>
+          <% unless @work.m12.blank? then %>
             <span class=idx>M12.</span>
           <% end %>
           <a class=song_name><%= @work.m12 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m13.nil? && !@work.m13.empty? then %>
+          <% unless @work.m13.blank? then %>
             <span class=idx>M13.</span>
           <% end %>
           <a class=song_name><%= @work.m13 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m14.nil? && !@work.m14.empty? then %>
+          <% unless @work.m14.blank? then %>
             <span class=idx>M14.</span>
           <% end %>
           <a class=song_name><%= @work.m14 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m15.nil? && !@work.m15.empty? then %>
+          <% unless @work.m15.blank? then %>
             <span class=idx>M15.</span>
           <% end %>
           <a class=song_name><%= @work.m15 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m16.nil? && !@work.m16.empty? then %>
+          <% unless @work.m16.blank? then %>
             <span class=idx>M16.</span>
           <% end %>
           <a class=song_name><%= @work.m16 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m17.nil? && !@work.m17.empty? then %>
+          <% unless @work.m17.blank? then %>
             <span class=idx>M17.</span>
           <% end %>
           <a class=song_name><%= @work.m17 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m18.nil? && !@work.m18.empty? then %>
+          <% unless @work.m18.blank? then %>
             <span class=idx>M18.</span>
           <% end %>
           <a class=song_name><%= @work.m18 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m19.nil? && !@work.m19.empty? then %>
+          <% unless @work.m19.blank? then %>
             <span class=idx>M19.</span>
           <% end %>
           <a class=song_name><%= @work.m19 %></a>
         </li>
 
         <li clsaa=song>
-          <% if !@work.m19.nil? && !@work.m19.empty? then %>
-            <span class=idx>M19.</span>
+          <% unless @work.m20.blank? then %>
+            <span class=idx>M20.</span>
           <% end %>
-          <a class=song_name><%= @work.m19 %></a>
+          <a class=song_name><%= @work.m20 %></a>
         </li>
       </ol>
     </div>
