--- a/app/views/works/index.html.erb
+++ b/app/views/works/index.html.erb
@@ -12,9 +12,14 @@
   </div>
   <% end %>
 </div>
-<%= link_to(new_artist_work_path, class: 'purchase-btn') do %>
-<span class='purchase-btn-text'>登録する</span>
-<%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+<%# ログインユーザーかつログインユーザーが管理者の場合に投稿画面へ遷移 %>
+<% if user_signed_in? && 1 == current_user.id %>
+  <%= link_to(new_artist_work_path, class: 'purchase-btn') do %>
+  <span class='purchase-btn-text'>登録する</span>
+  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+  <% end %>
+<% else %>
 <% end %>
+
 <%= render "shared/footer" %>
    
